[fix] changed to elastic move reverse & add conditional overflow

--- a/src/index.css
+++ b/src/index.css
@@ -7,50 +7,18 @@
     overflow: hidden;
   }
   
-  .elastic-one {
-    position: absolute;
-    width: 400px;
-    height: 250px; 
-    background: rgba(159, 125, 224, 0.3); 
-    border-radius: 50%;
-    filter: blur(60px);
-    animation: elasticMove 5s infinite ease-in-out;
-    left: 10%;
-    top: 20%;
-  }
-  
-
-  .elastic-two {
-    position: absolute;
-    width: 750px; 
-    height: 420px; 
-    background: rgba(126, 74, 224, 0.3);
-    border-radius: 50%;
-    filter: blur(60px);
-    animation: elasticMoveRight 5s infinite ease-in-out;
-    right: 5%;
-    top: 10%;
-  }
-  
   @keyframes elasticMove {
     0% {
-      transform: scale(1) translateX(0) translateY(0);
-    }
-    25% {
-      transform: scale(1.2) translateX(50px) translateY(20px);
+      transform: translateX(0px) translateY(0px);
     }
     50% {
-      transform: scale(1.3) translateX(120px) translateY(40px);
-    }
-    75% {
-      transform: scale(1.2) translateX(60px) translateY(100px);
+      transform: translateX(120px) translateY(40px);
     }
     100% {
-      transform: scale(1) translateX(0) translateY(0);
+      transform: translateX(0px) translateY(0px);
     }
   }
   
-
   @keyframes elasticMoveRight {
     0% {
       top: 10%;
@@ -61,17 +29,40 @@
       transform: scale(1.2);
     }
     100% {
-      top: 90%;
-      transform: scale(1.5);
+      top: 10%;
+      transform: scale(1);
     }
   }
-
+  
+  .elastic-one {
+    position: absolute;
+    width: 400px;
+    height: 250px; 
+    background: rgba(159, 125, 224, 0.3); 
+    border-radius: 50%;
+    filter: blur(60px);
+    animation: elasticMove 4s infinite ease-in-out alternate;
+    left: 10%;
+    top: 20%;
+  }
+  
+  .elastic-two {
+    position: absolute;
+    width: 750px; 
+    height: 420px; 
+    background: rgba(126, 74, 224, 0.3);
+    border-radius: 50%;
+    filter: blur(60px);
+    animation: elasticMoveRight 6s infinite ease-in-out alternate;
+    right: 5%;
+  }
+  
   ::-webkit-scrollbar {
     width: 8px;
   }
   
   ::-webkit-scrollbar-track {
-    background: #1e1e1f;
+    background: #98989b;
     border-radius: 10px;
   }
   
@@ -85,4 +76,8 @@
     background: #d97706;
   }
     
+  html, body {
+    overflow-x: hidden;
+    width: 100%;
+  }
   
